<resources>
    <string name="app_name">Chat</string>
    <string name="user_name">User name</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="new_user">new user ?</string>
    <string name="register"> Register</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_account">have account ? </string>
    <string name="title_activity_maps">Map</string>
    <string name="settings">Settings</string>
    <string name="new_group">New group</string>
    <string name="new_chat">New chat</string>
    <string name="log_out">Log out</string>

    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="type_a_message">Type a message</string>
    <string name="hint_enter_a_message">Type a message...</string>
    <string name="login_with_google">login with google</string>
</resources>