<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.example.chat.ui.login.LoginViewModel"/>


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@android:color/white"
        android:padding="8dp"
        tools:context=".ui.login.LoginActivity">
        <ImageView
            android:id="@+id/signOut_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_exit"
            android:onClick="@{()->vm.logOut()}"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/password_layout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userName_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>





        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/username_layout"
            app:passwordToggleEnabled="true"
            tools:layout_editor_absoluteX="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:onClick="@{()->vm.logIn()}"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toTopOf="@+id/loginWithGoogle_button"
            app:layout_constraintTop_toBottomOf="@+id/password_layout"
            tools:layout_editor_absoluteX="8dp" />
        <Button
            android:id="@+id/loginWithGoogle_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintBottom_toTopOf="@id/newUser_textView"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:text="login with google"
            android:onClick="@{()->vm.loginWithGoogle()}"
            />


        <TextView
            android:id="@+id/newUser_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/register_textView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginWithGoogle_button" />

        <TextView
            android:id="@+id/register_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="#0000ff"
            android:onClick="@{()->vm.goToRegister()}"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@id/newUser_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/newUser_textView"
            app:layout_constraintTop_toTopOf="@id/newUser_textView"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>